--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,6 @@ services:
       - JUPYTER_TOKEN=artsy
       - GRANT_SUDO=1
     volumes:
-      - ./src:/src
+      - ./:/work
     restart: unless-stopped
-    entrypoint: sh -c 'jupyter lab --notebook-dir=/src --allow-root'
+    entrypoint: sh -c 'jupyter lab --notebook-dir=/work --preferred-dir=/work/src --allow-root'
